// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchBar ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd css-1bsgm4r-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1vaidnl-MuiInputAdornment-root"
    >
      <span
        aria-hidden="true"
        class="notranslate"
      >
        ​
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-z0t891-MuiSvgIcon-root"
        data-testid="MagnifyIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        />
      </svg>
    </div>
    <input
      aria-label="Search"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-lo7f73-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-ah69n2-MuiInputAdornment-root"
    >
      <button
        aria-label="Clears the search"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeLarge css-ek4cr5-MuiButtonBase-root-MuiIconButton-root"
        color="primary"
        tabindex="0"
        title="Clears the search"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-d1s5pq-MuiSvgIcon-root"
          data-testid="CloseCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
          />
        </svg>
      </button>
    </div>
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-w4cd9x"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`SearchBar ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd css-tnekuq-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1vaidnl-MuiInputAdornment-root"
    >
      <span
        aria-hidden="true"
        class="notranslate"
      >
        ​
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1k6szzt-MuiSvgIcon-root"
        data-testid="MagnifyIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        />
      </svg>
    </div>
    <input
      aria-label="Search"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-14qhn4g-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-ah69n2-MuiInputAdornment-root"
    >
      <button
        aria-label="Clears the search"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-11vhsuv-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        title="Clears the search"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1tpud1o-MuiSvgIcon-root"
          data-testid="CloseCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
          />
        </svg>
      </button>
    </div>
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-w4cd9x"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`SearchBar ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd css-1klv6n6-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1vaidnl-MuiInputAdornment-root"
    >
      <span
        aria-hidden="true"
        class="notranslate"
      >
        ​
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-10r9l3z-MuiSvgIcon-root"
        data-testid="MagnifyIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        />
      </svg>
    </div>
    <input
      aria-label="Search"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-w0i5cc-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-ah69n2-MuiInputAdornment-root"
    >
      <button
        aria-label="Clears the search"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-11vhsuv-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        title="Clears the search"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-75t6cl-MuiSvgIcon-root"
          data-testid="CloseCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
          />
        </svg>
      </button>
    </div>
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-w4cd9x"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`SearchBar ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd css-18fo0a6-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1vaidnl-MuiInputAdornment-root"
    >
      <span
        aria-hidden="true"
        class="notranslate"
      >
        ​
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-10r9l3z-MuiSvgIcon-root"
        data-testid="MagnifyIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        />
      </svg>
    </div>
    <input
      aria-label="Search"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-14qhn4g-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-ah69n2-MuiInputAdornment-root"
    >
      <button
        aria-label="Clears the search"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-11vhsuv-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        title="Clears the search"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-75t6cl-MuiSvgIcon-root"
          data-testid="CloseCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
          />
        </svg>
      </button>
    </div>
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-w4cd9x"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`SearchBar ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd css-bm5eym-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1twfq1u-MuiInputAdornment-root"
    >
      <span
        aria-hidden="true"
        class="notranslate"
      >
        ​
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1k6szzt-MuiSvgIcon-root"
        data-testid="MagnifyIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        />
      </svg>
    </div>
    <input
      aria-label="Search"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-bvsvyt-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1yb3nci-MuiInputAdornment-root"
    >
      <button
        aria-label="Clears the search"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1veq5r2-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        title="Clears the search"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1mue8dp-MuiSvgIcon-root"
          data-testid="CloseCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
          />
        </svg>
      </button>
    </div>
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-w4cd9x"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`SearchBar ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd css-s4skfx-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionStart css-q8xcvu-MuiInputAdornment-root"
    >
      <span
        aria-hidden="true"
        class="notranslate"
      >
        ​
      </span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-obgb5z-MuiSvgIcon-root"
        data-testid="MagnifyIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
        />
      </svg>
    </div>
    <input
      aria-label="Search"
      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-s8de8o-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-oimghp-MuiInputAdornment-root"
    >
      <button
        aria-label="Clears the search"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1gbuwfp-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        title="Clears the search"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-b4t044-MuiSvgIcon-root"
          data-testid="CloseCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z"
          />
        </svg>
      </button>
    </div>
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-w4cd9x"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;
